--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -2,6 +2,26 @@
     &__pictures{
         background-color: $color-primary;
         grid-column:full-start / col-end 4 ;
+        display: grid;
+        grid-template-rows: repeat(6,1fr);
+        grid-template-columns: repeat(6,1fr);
+        align-items: center;
+        background-image:linear-gradient(rgba($color-primary,.3),rgba($color-primary,.3)), url(../img/back.jpg);
+
+    }
+    &__img--1{
+        width: 100%;
+        grid-row: 2/6;
+        grid-column:2/6 ;
+        box-shadow: 0 2rem 5rem rgba(0,0,0,.1);
+    }
+    &__img--2{
+        width: 115%;
+        grid-row: 4/6;
+        grid-column:4/7 ;
+        z-index: 55;
+        box-shadow: 0 2rem 5rem rgba(0,0,0,.1);
+
     }
     &__content{
         background-color: $color-grey-light-1;
