--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -1,4 +1,77 @@
 .homes{
-    background-color: $color-secondary;
     grid-column: center-start / center-end;
+    margin: 15rem 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(25rem,1fr));
+    grid-gap: 7rem;
+
+}
+.home{
+    background-color: $color-grey-light-1;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 3.5rem;
+    
+
+    &__img{
+        width: 100%;
+        grid-column: 1/-1;
+        grid-row: 1/2;
+        z-index: 1;
+    }
+    &__like{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        fill: $color-primary;
+        width: 2rem;
+        height: 2rem;
+        justify-self:end;
+        margin: 1rem;
+        z-index: 2;
+    }
+    &__name{
+        grid-column: 1/-1;
+        grid-row: 1/2;
+        align-self: end;
+        background-color: $color-secondary;
+        color: #fff;
+        justify-self: center;
+        text-align: center;
+        width: 80%;
+        padding: 1.25rem ;
+        font-size: 1.6rem;
+        transform: translateY(50%);
+        font-family: $font-display;
+        font-weight: 400;
+        z-index: 5;
+    }
+    &__location,
+    &__rooms{
+        margin-top: 2rem;
+    }
+    &__location,
+    &__rooms,
+    &__area,
+    &__price{
+        display: flex;
+        margin-left: 2rem;
+        font-size: 1.5rem;
+        align-items: center;
+
+        svg{
+
+            fill: $color-primary;
+            width: 2rem;
+            height: 2rem;
+            margin-right: 1rem;
+        }
+        p{
+
+        }
+
+    }
+    &__btn{
+        grid-column: 1/-1;
+    }
+
 }
