adding the media query

--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -7,13 +7,21 @@
         grid-template-columns: repeat(6,1fr);
         align-items: center;
         background-image:linear-gradient(rgba($color-primary,.3),rgba($color-primary,.3)), url(../img/back.jpg);
-
+        @media only screen and (max-width:$bp-medium){
+            grid-column: 1/-1;
+            padding: 6rem;
+        }
     }
     &__img--1{
         width: 100%;
         grid-row: 2/6;
         grid-column:2/6 ;
         box-shadow: 0 2rem 5rem rgba(0,0,0,.1);
+        @media only screen and (max-width:$bp-medium){
+            grid-column: 1/5;
+            grid-row:1/-1 ;
+            height: 100%;
+        }
     }
     &__img--2{
         width: 115%;
@@ -21,6 +29,10 @@
         grid-column:4/7 ;
         z-index: 55;
         box-shadow: 0 2rem 5rem rgba(0,0,0,.1);
+        @media only screen and (max-width:$bp-medium){
+            grid-row:1/-1 ;
+            width: 100%;
+        }
 
     }
     &__content{
@@ -31,6 +43,10 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
+        @media only screen and (max-width:$bp-medium){
+            grid-column: 1/-1;
+            grid-row: 5/6;
+        }
 
     }
     &__text{
